<resources>
    <string name="app_name">SuperVend</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="OBTitle">Welcome to SuperVend!</string>
    <string name="OBPg1">We have the most advanced Vending Machines worldwide.</string>
    <string name="OBPg2">Purchase products ranging from food to pharmacy by adding items to cart.</string>
    <string name="OBPg3">Checkout and collect your items.</string>
    <string name="OBPg4">What are you waiting for?</string>
    <string name="start">Browse Now!</string>

    <string name="sign_up">Sign Up</string>
    <string name="contact_information">Contact Information</string>

    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="description_message">Welcome to SuperVend!</string>
    <string name="contact_message">Contact us:</string>
    <string name="description_content">SuperVend, a promising local startup which specializes in mega vending machines is also aiming to disrupt the retailing industry. Our company’s business model is to strategically position their mega vending machines (which are about the size of a 40 feet shipping containers) all over Singapore. Our idea is to bring supermarket nearer to customers 24/7 and to encourage social distancing due to the current raging COVID-19 pandemic. The goal of our company is to have a SuperVend vending machine installed within every 100 meters apart in each populated district by 2022.</string>
    <string name="contact_content_1">Phone Number: +65 8888 8888</string>
    <string name="phone">+65 8888 8888</string>
    <string name="contact_content_2">Email: SuperVendOfficial@supervend.sv</string>
    <string name="email">SuperVendOfficial@supervend.sv</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="confirm">Confirm Password: </string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="alertTitle">Alert</string>
    <string name="delete">Delete</string>

    <string name="copy">Copy</string>

    <string name="columns">Columns</string>
    <string name="mode">Mode</string>

    <string-array name="item_names">
        <item>Milo Instant Mix</item>
        <item>Instant Noodles</item>
        <item>Ice Cream</item>
        <item>Beef Cubes</item>
        <item>Fuji Apples</item>
    </string-array>

    <string-array name="item_prices">
        <item>5.2</item>
        <item>2.4</item>
        <item>25.9</item>
        <item>4.1</item>
        <item>5.5</item>
    </string-array>

    <string-array name="item_weights">
        <item>250</item>
        <item>500</item>
        <item>200</item>
        <item>300</item>
        <item>100</item>
    </string-array>

    <string-array name="item_brands">
        <item>Nestle</item>
        <item>Myojo</item>
        <item>Haagen Dazs</item>
        <item>Chef Delights</item>
        <item>Pasar</item>
    </string-array>

    <string-array name="item_descriptions">
        <item>Milo with ACTIV-GO gives you the energy to go further. Contains b vitamins which contribute to the reduction of tiredness and fatigue.</item>
        <item>Specially mixed flour for premium noodles is used to bring a chewy texture to the noodles.</item>
        <item>Fudgy chunks of brownie goodness mixed into dark and rich chocolate ice cream. Sounds like a dream.</item>
        <item>Made from quality meat Beef Cubes is a 100-Percent Halal product that is suitable for all consumer groups.</item>
        <item>One of the sweetest apples with 16~18% sugar with a higher glucose/fructose content than most apples.</item>
    </string-array>

    <string name="item_name">Name: %s</string>
    <string name="item_price">Price: $%.2f</string>
    <string name="item_weight">Weight: %dg</string>
    <string name="item_brand">Brand: %s</string>
    <string name="item_description">Description: %s</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="empty">Shopping cart is empty.</string>

    <array name="reviews">
        <item>@array/milo_instant_mix</item>
        <item>@array/instant_noodles</item>
        <item>@array/ice_cream</item>
        <item>@array/beef_cubes</item>
        <item>@array/fuji_apples</item>
    </array>

    <array name="milo_instant_mix">
        <item>@array/milo_instant_mix_name</item>
        <item>@array/milo_instant_mix_comment</item>
        <item>@array/milo_instant_mix_rating</item>
    </array>

    <array name="milo_instant_mix_name">
        <item>Karen</item>
        <item>Jane</item>
        <item>Wok</item>
        <item>Marvel</item>
        <item>Jonathan</item>
    </array>

    <array name="milo_instant_mix_comment">
        <item>Bought it for my kids. They loved it.</item>
        <item>My husband loves it.</item>
        <item>Good breakfast material.</item>
        <item>Whew! Glad to find that this is still in stock at SuperVend!</item>
        <item>Drank this before my badminton competition and wow, did I move faster. Recommended for drinking before sports.</item>
    </array>

    <string-array name="milo_instant_mix_rating">
        <item>4.5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
    </string-array>

    <array name="instant_noodles">
        <item>@array/instant_noodles_name</item>
        <item>@array/instant_noodles_comment</item>
        <item>@array/instant_noodles_rating</item>
    </array>

    <array name="instant_noodles_name">
        <item>Matt</item>
        <item>Brady Haran</item>
        <item>Burkard Polster</item>
        <item>Ramanujan</item>
    </array>

    <array name="instant_noodles_comment">
        <item>Perfect. I can purchase 10 at once.</item>
        <item>I love eating them while watching YouTube. Not healthy though. Eat sparingly.</item>
        <item>I agree with Brady, eat sparingly.</item>
        <item>I agree with the gentlemen above. It is not recommended to eat too much despite its convenience.</item>
    </array>

    <string-array name="instant_noodles_rating">
        <item>5</item>
        <item>4</item>
        <item>3.5</item>
        <item>4</item>
    </string-array>

    <array name="ice_cream">
        <item>@array/ice_cream_name</item>
        <item>@array/ice_cream_comment</item>
        <item>@array/ice_cream_rating</item>
    </array>

    <array name="ice_cream_name">
        <item>Mary</item>
        <item>Harry</item>
        <item>Jerry</item>
    </array>

    <array name="ice_cream_comment">
        <item>Not recommended. Too much sugar.</item>
        <item>Totally savoured it. I mean, who does not like ice cream, right? It tastes the best after lunch and dinner.</item>
        <item>Love it. A spoon of ice cream after work is heaven.</item>
    </array>

    <string-array name="ice_cream_rating">
        <item>1</item>
        <item>5</item>
        <item>5</item>
    </string-array>

    <array name="beef_cubes">
        <item>@array/beef_cubes_name</item>
        <item>@array/beef_cubes_comment</item>
        <item>@array/beef_cubes_rating</item>
    </array>

    <array name="beef_cubes_name">
        <item>Ken</item>
        <item>Felix</item>
        <item>Eve</item>
    </array>

    <array name="beef_cubes_comment">
        <item>Good. Moderate. Average.</item>
        <item>Definitely the choice for all families.</item>
        <item>My mother loved to cook these beef cubes when I was little. Enjoyed them. Glad to find them again.</item>
    </array>

    <string-array name="beef_cubes_rating">
        <item>2.5</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <array name="fuji_apples">
        <item>@array/fuji_apples_name</item>
        <item>@array/fuji_apples_comment</item>
        <item>@array/fuji_apples_rating</item>
    </array>

    <array name="fuji_apples_name">
        <item>Funny</item>
        <item>Diego</item>
        <item>Dr. Wu</item>
    </array>

    <array name="fuji_apples_comment">
        <item>I love these apples so much. They are fresh and very much addictive.</item>
        <item>I agree with Funny. I got so addicted that I ate 2 apples for breakfast, 4 apples for lunch and 3 apples for dinner. Definitely recommended!</item>
        <item>An apple a day keeps the doctor away. I lost many customers.</item>
    </array>

    <string-array name="fuji_apples_rating">
        <item>5</item>
        <item>5</item>
        <item>0</item>
    </string-array>

</resources>